Adjusts looking for openscad.exe
The program now asks the user if it cant be found in C:\\Program Files\OpenSCAD. Otherwise it temporarily sets up an environmental variable allowing the program to run.